# clustkit

./: .buildinfo  .gitignore  LICENSE  README.md  genindex.html  idea.md  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.py
.github/workflows/: docs.yml
_sources/: index.rst.txt
_sources/advanced/: index.rst.txt
_sources/change_log/: index.rst.txt
_sources/tutorials/: index.rst.txt
about/: index.html
advanced/: index.html
benchmarks/: analyze_orthobench_groups.py  analyze_paper_metrics.py  benchmark_ablation.py  benchmark_additional_protein.py  benchmark_alignment_speedup.py  benchmark_annotation_consistency.py  benchmark_cdhit_comparison.py  benchmark_comprehensive.py  benchmark_correctness.py  benchmark_full_scope.py  benchmark_gpu_alignment.py  benchmark_gpu_large.py  benchmark_gpu_vs_cpu.py  benchmark_large_scale.py  benchmark_lsh_recall.py  benchmark_memory_v2.py  benchmark_metagenomic.py  benchmark_nucleotide.py  benchmark_orthobench.py  benchmark_pfam_concordance.py  benchmark_pfam_gpu.py  benchmark_pfam_gpu_optimized.py  benchmark_pfam_large.py  benchmark_phase_breakdown.py  benchmark_runtime_scaling.py  benchmark_scaling.py  benchmark_scaling_comparison.py  benchmark_scop_search.py  benchmark_search.py  benchmark_simulated.py  benchmark_speed_sensitivity.py  benchmark_thread_scaling.py  benchmark_thread_scaling_v2.py  build_scaling_subsets.py  calibrate_clustering_sketch_sizes.py  download_pfam_families.py  generate_figures.py  pilot_2idx_lgbm.py  pilot_all_c.py  pilot_all_c_5idx.py  (+54 more)
change_log/: index.html
clustkit/: __init__.py  candidates.py  cli.py  cluster.py  clustering_mode.py  database.py  graph.py  io.py  kmer_index.py  lsh.py  pairwise.py  pipeline.py  plot.py  representatives.py  search.py  sketch.py  utils.py
clustkit.egg-info/: SOURCES.txt  requires.txt  top_level.txt
clustkit/csrc/: kmer_score.c  kmer_score_fused.c  sw_align.c  union_features.c
docs/: all_iterations.md  architecture.md  clustering_benchmarks.md  conf.py  index.rst  optimization_changelog.md  search_benchmarks.md
docs/_templates/: sidebar-top.html
docs/about/: index.rst
docs/frequently_asked_questions/: index.rst
frequently_asked_questions/: index.html
other_software/: index.html
tests/: conftest.py  test_cli.py  test_cluster.py  test_graph_pruning.py  test_io.py  test_lsh.py  test_pairwise.py  test_pipeline_integration.py  test_representatives.py  test_search.py  test_sketch.py
tutorials/: index.html
