[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clustkit"
version = "0.1.2"
description = "Accurate protein sequence clustering via LSH, Smith-Waterman alignment, and Leiden community detection"
license = {text = "MIT"}
requires-python = ">=3.10"
readme = "README.md"
authors = [
    { name = "ClustKIT Contributors" },
]
keywords = [
    "bioinformatics", "clustering", "alignment", "protein",
    "MinHash", "LSH", "Smith-Waterman", "Leiden", "community-detection",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.24.0",
    "numba>=0.58.0",
    "biopython>=1.82",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "scipy>=1.11.0",
    "leidenalg",
    "python-igraph",
    "pypubfigs>=1.1.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
gpu = [
    "cupy-cuda12x",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "scikit-learn>=1.3.0",
]

[project.scripts]
clustkit = "clustkit.cli:app"

[project.urls]
Homepage = "https://github.com/JLSteenwyk/ClustKIT"
Repository = "https://github.com/JLSteenwyk/ClustKIT"
Issues = "https://github.com/JLSteenwyk/ClustKIT/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["clustkit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
